tests/snapshots/log_viewer__app__data__tests__short.log_debug.snap
---
source: src/app/data/tests.rs
expression: data
---
Data {
    selected_row: None,
    filter: None,
    rows: [
        LogRow {
            data: {
                "file": String("crates/server/src/startup.rs"),
                "hostname": String("my_pc"),
                "level": Number(30),
                "level_str": String("Info"),
                "line": Number(34),
                "msg": String("Server address is: 127.0.0.1:8000"),
                "name": String("my_server"),
                "pid": Number(50401),
                "row#": Number(0),
                "row_size": Number(228.0),
                "target": String("my_server::startup"),
                "time": String("2024-02-10T03:13:04.191299188Z"),
                "v": Number(0),
            },
            cached_display_list: None,
        },
        LogRow {
            data: {
                "file": String("/home/user/.cargo/registry/src/index.crates.io-6f17d22bba15001f/actix-server-2.3.0/src/builder.rs"),
                "hostname": String("my_pc"),
                "level": Number(30),
                "level_str": String("Info"),
                "line": Number(240),
                "msg": String("starting 8 workers"),
                "name": String("my_server"),
                "pid": Number(50401),
                "row#": Number(1),
                "row_size": Number(286.0),
                "target": String("actix_server::builder"),
                "time": String("2024-02-10T03:13:04.191610465Z"),
                "v": Number(0),
            },
            cached_display_list: None,
        },
    ],
    filtered_rows: None,
    applied_filter: None,
}
