tests/snapshots/log_viewer__app__data__tests__short.log_ron.snap
---
source: src/app/data/tests.rs
expression: data
---
Data(
  selected_row: None,
  filter: None,
  rows: [
    LogRow(
      data: {
        "file": "crates/server/src/startup.rs",
        "hostname": "my_pc",
        "level": 30,
        "level_str": "Info",
        "line": 34,
        "msg": "Server address is: 127.0.0.1:8000",
        "name": "my_server",
        "pid": 50401,
        "row#": 0,
        "row_size": "0000.2227 KB",
        "target": "my_server::startup",
        "time": "2024-02-10T03:13:04.191299188Z",
        "v": 0,
      },
    ),
    LogRow(
      data: {
        "file": "/home/user/.cargo/registry/src/index.crates.io-6f17d22bba15001f/actix-server-2.3.0/src/builder.rs",
        "hostname": "my_pc",
        "level": 30,
        "level_str": "Info",
        "line": 240,
        "msg": "starting 8 workers",
        "name": "my_server",
        "pid": 50401,
        "row#": 1,
        "row_size": "0000.2793 KB",
        "target": "actix_server::builder",
        "time": "2024-02-10T03:13:04.191610465Z",
        "v": 0,
      },
    ),
  ],
  filtered_rows: None,
  applied_filter: None,
  file_size_as_bytes: 516,
)
